test/valid/LeastUpperBoundInIf/B.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: B.plume 390 2012-05-21 15:00:43Z tcomp000 $
 */
class B extends A is