test/invalid/fc34950_TypeChecking_Cast_Sheeps_2/C.plume
/**
 * C.plume
 *
 * Test: extends itself indirectly 
 * A->B->C->D->A   ('->' means extends)
 *
 * @author namartins
 * @version $Id: C.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 
 abstract class C extends D is	
 	